# Tiny-Local-LLM-System-Expanded

./: .gitattributes  .gitignore  README.md  pyproject.toml  run_app.bat
app/: app.py  config.py
app/llm/: agents.json  agents.py  chat.py  engine.py
tests/: test_config.py
tests/llm/: test_agents.py  test_chat.py  test_engine.py
