[project]
name = "tiny-local-llm-system-expanded"
version = "0.1.0"
description = "TinyLlama-based multi-persona local chat REPL. Pick an agent, chat with it."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "diskcache==5.6.3",
    "jinja2==3.1.6",
    "llama-cpp-python==0.3.16",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "mdurl==0.1.2",
    "numpy>=1.26,<3",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "pygments==2.19.2",
    "rich==14.3.2",
    "typing-extensions==4.15.0"
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
